# hs-openal-proto

./: LICENSE  README.md  openal-proto.cabal
src/: PlayCmd.hs
src/Sound/OpenAL/: Proto.hs
src/Sound/OpenAL/Proto/: Capture.hs  Conversion.hs  IO.hs  Play.hs  Types.hs  UnitGen.hs
