name:                openal-proto
version:             0.1.0.0
synopsis:            OpenAL audio output and capturing example
description:
    Prototype code with OpenAL audio output and capturing.
homepage:            https://github.com/peterhil/hs-openal-proto
license:             BSD3
license-file:        LICENSE
author:              Peter Hillerström
maintainer:          peter.hillerstrom@gmail.com
category:            Sound
build-type:          Simple
extra-source-files:
    README.md
cabal-version:       >=1.10

library
    exposed-modules:
        Sound.OpenAL.Proto
        Sound.OpenAL.Proto.Capture
        Sound.OpenAL.Proto.Conversion
        Sound.OpenAL.Proto.Play
        Sound.OpenAL.Proto.Types
        Sound.OpenAL.Proto.UnitGen
    other-modules:
        Sound.OpenAL.Proto.IO
    build-depends:
        ALUT == 2.3.0.1,
        HCodecs == 0.5,
        OpenAL == 1.6.0.0,
        array == 0.4.*,
        base >=4.6 && <4.7,
        bytestring == 0.10.*,
        spool == 0.1,
        vector == 0.10.*
    hs-source-dirs:      src
    default-language:    Haskell2010

executable openal-proto-play
    main-is: PlayCmd.hs
    other-modules:
        Sound.OpenAL.Proto
        Sound.OpenAL.Proto.Capture
        Sound.OpenAL.Proto.Conversion
        Sound.OpenAL.Proto.IO
        Sound.OpenAL.Proto.Play
        Sound.OpenAL.Proto.Types
        Sound.OpenAL.Proto.UnitGen
    build-depends:
        ALUT == 2.3.0.1,
        HCodecs == 0.5,
        OpenAL == 1.6.0.0,
        array == 0.4.*,
        base >=4.6 && <4.7,
        bytestring == 0.10.*,
        spool == 0.1,
        vector == 0.10.*
    hs-source-dirs: src
    default-language: Haskell2010

source-repository head
    type: git
    location:   location: https://github.com/peterhil/hs-openal-proto
